[tool.poetry]
name = "telegram-bot-boilerplate"
version = "0.1.0"
description = ""
authors = ["Filipe Andrade <filipe.engenharia42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
